cabal-version:       3.4

name:                wai-secure-cookies
version:             0.1.0.6
description:         WAI middleware to automatically encrypt and sign cookies
homepage:            https://github.com/habibalamin/wai-secure-cookies
license:             MIT
license-file:        LICENSE
author:              Habib Alamin
maintainer:          ha.alamin@gmail.com
copyright:           © حبيب الأمين ‪2023
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Cookie.Secure.Middleware
  other-modules:       Cookie.Secure
                     , Crypto.Encryption
                     , Crypto.Verification
                     , Extension.Either
                     , Extension.ByteString
  build-depends:       base >= 4.7 && < 5
                     , wai >= 3.2 && < 4
                     , cryptonite >= 0.24
                     , bytestring >= 0.10
                     , memory >= 0.14
                     , random >= 1.1
                     , split >= 0.2
                     , http-types >= 0.12.1

test-suite wai-secure-cookies-test
  hs-source-dirs:      spec
  default-language:    Haskell2010
  other-modules:       MiddlewareSpec
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-tool-depends:  hspec-discover:hspec-discover
  build-depends:       base >= 4.7
                     , bytestring >= 0.10
                     , wai >= 3.2
                     , wai-extra >= 3.0
                     , http-types >= 0.12.1
                     , wai-secure-cookies
                     , hspec
                     , hspec-expectations
                     , hspec-wai
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N

executable waicookie-genkey
  hs-source-dirs:      keygensrc
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >= 4.7
                     , cryptonite >= 0.24
                     , bytestring >= 0.10
                     , memory >= 0.14
